Cleaning up names and adding GetSystems
