# nodejs-server-server/api/swagger.yaml
@@ -10,6 +10,7 @@ paths:
     post:
       summary: "Create a new log entry."
       description: "Optional extended description in CommonMark or HTML."
+      x-swagger-router-controller: "PostLogs"
       operationId: "logPOST"
       consumes:
       - "application/json"
@@ -25,18 +26,36 @@ paths:
         in: "body"        
         required: true
         schema:
-          $ref: "#/definitions/LogEntry"
+          $ref: "#/definitions/Log"
       responses:
         204:
           description: "A log entry is successfully made and nothing is returned."
-      x-swagger-router-controller: "Default"
-    x-swagger-router-controller: "entry"
-  /log/{system}/{timestamp}:
+  /log/all/{timestamp}:
     get:
       summary: "Get all logs after the provided timestamp"
       description: "Optional extended description in CommonMark or HTML."
       x-swagger-router-controller: "GetLogs"
       operationId: "logGET"
+      produces:
+      - "application/json"
+      parameters:      
+      - name: "timestamp"
+        in: "path"        
+        description: "Only log entries whose timestamp comes after this one will be returned"
+        required: true
+        type: "string"
+        format: "date-time"
+      responses:
+        200:
+          description: "successful operation"
+          schema:          
+            $ref: "#/definitions/Logs"                    
+  /log/{system}/{timestamp}:
+    get:
+      summary: "Get all logs, for the provided system, after the provided timestamp"
+      description: "Optional extended description in CommonMark or HTML."
+      x-swagger-router-controller: "GetLogs"
+      operationId: "logBySystemGET"
       produces:
       - "application/json"
       parameters:
@@ -55,20 +74,49 @@ paths:
       responses:
         200:
           description: "successful operation"
+          schema:            
+            $ref: "#/definitions/Logs"
+  /system:
+    get:
+      summary: "Get the names of all systems that have created log entries."
+      description: "Optional extended description in CommonMark or HTML."
+      x-swagger-router-controller: "GetSystems"
+      operationId: "systemGET"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation" 
           schema:
-            type: "array"
-            items:
-              $ref: "#/definitions/LogEntry"
+            $ref: '#/definitions/Systems'
+
 definitions:
-  LogEntry:
-    required:
-    - "sensors"
-    - "timestamp"
+  Systems:
+    type: "object"
     properties:
-      sensors:
-        type: "object"        
-        description: "The sensor data"      
-      timestamp:
+      entries:
+        type: "array"
+        items: 
+          type: "string"
+        description: "The names of the systems"
+  Logs:
+    type: "object"
+    properties:
+      entries:
+        type: "array"
+        items:
+          $ref: '#/definitions/Log'
+  Log:
+    required:    
+    - "sensors"
+    - "timestamp"  
+    type: "object"
+    properties:
+      system:        
+        type: "string"
+      sensors:         
+        type: "object"
+      timestamp:         
         type: "string"
         format: "dateTime"
-        description: "Time the measurements were collected"
+    description: "The sensor data, timestamp, and systemID"
