# nodejs-server-server/controllers/GetLogs.js
@@ -2,8 +2,12 @@
 
 var url = require('url');
 
-var Default = require('./GetLogsService');
+var GetLogsService = require('./GetLogsService');
 
 module.exports.logGET = function logGET (req, res, next) {
-  Default.logGET(req.swagger.params, res, next);
+  GetLogsService.logGET(req.swagger.params, res, next);
+};
+
+module.exports.logBySystemGET = function logBySystemGET (req, res, next) {
+  GetLogsService.logBySystemGET(req.swagger.params, res, next);
 };
