# nodejs-server-server/controllers/GetLogsService.js
@@ -14,34 +14,66 @@ exports.logGET = function(args, res, next) {
   const db = new(cradle.Connection)().database(dbName);   
 
   let inputTimestamp = new Date(args.timestamp.value.toISOString());    
-
-  let results = {};
-
-  let designDoc = '_design/' + args.system.value;
-  let viewName = args.system.value + '/byTimestamp'; 
   
-  db.get(designDoc, function (err, doc) {
+  let viewName = 'log/byTimestamp'; 
+  
+  db.view(viewName, function(err, results) {          
     if (err) {
-      res.write(JSON.stringify("System does not exist: " + args.system.value));      
-      res.end();  
-    } else {
-      db.view(viewName, function(err, results) {  
-        let filteredResults = {};
+      res.write(JSON.stringify(err));
+    } else if (results) {
+      let filteredResults = {entries: []};
+      results.forEach(function (key, row) {        
+        let docTimestamp = new Date(key);                                
+        if (docTimestamp > inputTimestamp) {
+          let record = row.sensors;
+          record['system'] = row.system;
+          record['timestamp'] = row.timestamp;
+          filteredResults.entries.push(record);    
+        }      
+      })
+      console.log('Results: ' + JSON.stringify(filteredResults));
+      res.write(JSON.stringify(filteredResults));          
+    }         
+    res.end();   
+  });
+    
+}
 
-        if (err) {
-          res.write(JSON.stringify(err));
-        } else if (results) {
-          results.forEach(function (key, row) {
-            var docTimestamp = new Date(key);                                
-            if (docTimestamp > inputTimestamp && args.system.value === row.system)
-              filteredResults[row.timestamp] = row.sensors;          
-          });
+exports.logBySystemGET = function(args, res, next) {
+  /**
+   * Return all logs entries, for the provided system, 
+   * that come after the provided timestamp.
+   * Optional extended description in CommonMark or HTML.
+   *
+   * entry LogEntry 
+   * no response value expected for this operation
+   **/
+  
+  const cradle = require('cradle');
+  const dbName = 'gh'
+  const db = new(cradle.Connection)().database(dbName);   
 
-          console.log('Results: ' + JSON.stringify(filteredResults));
-          res.write(JSON.stringify(filteredResults));          
-        }         
-        res.end();   
-      });
-    }
-  });  
+  let inputTimestamp = new Date(args.timestamp.value.toISOString());    
+  
+  let viewName = 'log/byTimestamp'; 
+
+  db.view(viewName, function(err, results) {          
+    if (err) {
+      res.write(JSON.stringify(err));
+    } else if (results) {
+      let filteredResults = {entries: []};          
+      results.forEach(function (key, row) {        
+        let docTimestamp = new Date(key);                                
+        if (docTimestamp > inputTimestamp && args.system.value === row.system) {
+          let record = row.sensors;
+          record['system'] = row.system;
+          record['timestamp'] = row.timestamp;
+          filteredResults.entries.push = record;
+        }          
+      })
+      console.log('Results: ' + JSON.stringify(filteredResults));
+      res.write(JSON.stringify(filteredResults)); 
+    }         
+    res.end();   
+  });      
 }
