# nodejs-server-server/controllers/GetSystems.js
@@ -1,0 +1,9 @@
+'use strict';
+
+var url = require('url');
+
+var GetSystemsService = require('./GetSystemsService');
+
+module.exports.systemGET = function systemGET (req, res, next) {
+  GetSystemsService.systemGET(req.swagger.params, res, next);
+};
